mock:// video_frame_rate option breaks the video stream

Without the option:

image

With the option: ./build-native/bin/vlc-osx-static 'mock://length=1000000000000000;video_width=1920;video_height=1080;video_track_count=1;audio_track_count=1;video_frame_rate=60'

image

The video and the PCR should not drift apart at the demuxer level.